Admin: Fix permission group admin

--- a/shuup/admin/templates/shuup/admin/permission_groups/edit.jinja
+++ b/shuup/admin/templates/shuup/admin/permission_groups/edit.jinja
@@ -15,3 +15,16 @@
     {% endcall %}
 {% endblock %}
 
+{% block extra_js %}
+    <script>
+        (function() {
+            $("input[type='checkbox']").on("change", function() {
+                var name = $(this).attr('name');
+                var desiredValue = $(this).is(":checked")
+                $("input[name='" + name + "']").each(function() {
+                    $(this).attr("checked", desiredValue);
+                })
+            })
+        })();
+    </script>
+{% endblock %}
